<resources>
    <string name="app_name">Finance Tracker</string>


    <!-- Order by Spinner -->
    <string name="order_by_date">Date</string>
    <string name="order_by_value">Value</string>

    <string-array name="order_by_arrays">
        <item>@string/order_by_date</item>
        <item>@string/order_by_value</item>
    </string-array>

    <!-- AscendingDescending by Spinner -->
    <string name="order_by_ascending">Ascending</string>
    <string name="order_by_descending">Descending</string>

    <string-array name="ascending_descending">
        <item>@string/order_by_ascending</item>
        <item>@string/order_by_descending</item>
    </string-array>

    <!-- Show spinner -->
    <string name="show_year">Year</string>
    <string name="show_month">Month</string>
    <string name="show_from_to">From...To</string>

    <string-array name="show_arrays">
        <item>@string/show_month</item>
        <item>@string/show_year</item>
        <item>@string/show_from_to</item>
    </string-array>

    <!-- Hide spinner -->
    <string name="hide_showAll">Show All</string>
    <string name="hide_hideSingle">Hide Single Expenses</string>
    <string name="hide_hideRepeated">Hide Repeated Expenses</string>

    <string-array name="hide_arrays">
        <item>@string/hide_showAll</item>
        <item>@string/hide_hideSingle</item>
        <item>@string/hide_hideRepeated</item>
    </string-array>

    <!-- Repeated Issues spinner -->
    <string name="repeated_year">Years</string>
    <string name="repeated_month">Months</string>
    <string name="repeated_week">Weeks</string>
    <string name="repeated_Day">Days</string>

    <string-array name="repeated_arrays">
        <item>@string/repeated_year</item>
        <item>@string/repeated_month</item>
        <item>@string/repeated_week</item>
        <item>@string/repeated_Day</item>
    </string-array>

    <!-- Hints -->
    <string name="hint_title">Title</string>
    <string name="hint_value">Value</string>
    <string name="hint_description">Description</string>
    <string name="hint_3LetterCode">3-Letter Code</string>

    <!-- Statements -->
    <string name="statement_total">"Total: "</string>
    <string name="statement_totalDay">Total Day: </string>
    <string name="statement_totalMonth">Total Month: </string>
    <string name="statement_totalYear">Total Year: </string>
    <string name="statement_start">Start:</string>
    <string name="statement_end">End:</string>
    <string name="statement_from">From:</string>
    <string name="statement_to">To:</string>
    <string name="statement_year">Year:</string>
    <string name="statement_month">Month:</string>
    <string name="statement_currency">Currency</string>
    <string name="statement_oldCurrency">Old Currency: </string>
    <string name="statement_every">Every</string>

    <!-- Buttons -->
    <string name="button_ok">OK</string>
    <string name="button_addRepeatedOutgoing">Add Repeated Expenses</string>
    <string name="button_deleteAll">Delete All</string>
    <string name="button_deleteAllFiltered">Delete All Filtered</string>
    <string name="button_addCurrency">Add Currency</string>
    <string name="button_changeCurrency">Change Currency</string>
    <string name="button_overview">Overview</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>

    <!-- Alert Dialog -->
    <string name="dialog_question">Are you sure?</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>

    <!-- Labels -->
    <string name="label_addNewItem">Add A New Expense</string>
    <string name="label_overview">Overview</string>
    <string name="label_editItem">Edit Expense</string>
    <string name="label_changeCurrency">Change Currency</string>
    <string name="label_addRepeatedOutgoing">Add Repeated Expenses</string>
    <string name="label_editRepeatedOutgoing">Edit Repeated Expenses</string>
    <string name="label_info">Info</string>

    <!-- Toast -->
    <string name="toast_noYearMonth">Enter A Year and Month</string>
    <string name="toast_noMonth">Enter A Month</string>
    <string name="toast_noYear">Enter A Year</string>
    <string name="toast_invalidMonth">Enter A Valid Month: 1-12</string>
    <string name="toast_itemsAlreadyExists">Expense Already Exists</string>
    <string name="toast_enterATitleAndValue">Enter A Value And Title</string>
    <string name="toast_enter3LetterCurrency">Enter A 3-Letter Currency</string>

    <!-- Widget -->
    <string name="appwidget_outgoing">Expenses</string>
    <string name="appwidget_button_addNew">Today</string>
    <string name="appwidget_button_addNewRepeated">Repeated</string>

    <!-- menu -->
    <string name="menu_info">Info</string>
    <string name="menu_Overview">Overview</string>
    <string name="menu_AddCurrency">Change Currency</string>
    <string name="menu_AddRepeatedOutgoing">Add Repeated Expenses</string>
    <string name="menu_DeleteAllValues">Delete All Expenses</string>
    <string name="menu_MainMenu">Add Single Expenses</string>

    <!-- info -->
    <string name="info">
        At First, thank you for using my App.

        \n\nWith this app you have an overview of your expenses. To add a new expense,
        double-click on the day of the calendar. There you must enter a Title and a Value.

        \n\nIf you want, you can enter a description and edit the color of the title. Then you can save the expense.
        If you have a repeated expense, click on “Add Repeated Expenses” in the menu
        and there you can enter an expense which is repeated every X years, months, weeks or days. From the start date until the end date.

        \n\nIf you want to edit your expense, you just have to click on the expense on the list. There you can edit or delete the expense.

        \n\nIf you want to change the currency click on “Change Currency” in the menu,
        there you have to enter the 3-Letter Code of the Currency.

        \n\nTo have an overview of all your expenses click on “Overview” in the menu.
        There you can choose if it should be sorted by date or value and if ascending or descending.
        Furthermore, you can choose if it should show a specific year, month or from a start and end day.
        If you want to delete ALL expenses click on “Delete All Expenses” in the menu. This will delete all your expenses.

        \n\nI would like if you rate my app or if you want you can spend some money for the creator.
    </string>

</resources>
