<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        style="@style/general_Middle_Margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/appwidget_outgoing"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_AddNewOutgoingWidget_AddNew"
            style="@style/general_Margin_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/appwidget_button_addNew" />

        <Button
            android:id="@+id/button_AddNewOutgoingWidget_AddNewRepeated"
            style="@style/general_Margin_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/appwidget_button_addNewRepeated" />
    </LinearLayout>
</LinearLayout>