<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.EditRepeatedItemsActivity">

    <include
        android:id="@+id/toolbar_MainActivity"
        layout="@layout/toolbar_main_activity">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- EditText for Title -->
        <EditText
            android:id="@+id/editText_EditRepeatedItemsActivity_Titel"
            style="@style/editText_Title" />

        <Button
            android:id="@+id/button_EditRepeatedItemsActivity_ChooseColor"
            style="@style/button_Color_Chooser"
            android:background="@drawable/button_color_chooser" />

    </LinearLayout>

    <!-- Layout for Currency -->
    <LinearLayout style="@style/general_Middle_MatchParent">


        <!-- EditText Value -->
        <EditText
            android:id="@+id/editText_EditRepeatedItemsActivity_Value"
            style="@style/general_WrapContent"
            android:layout_weight="1"
            android:hint="@string/hint_value"
            android:inputType="numberDecimal" />

        <!-- TextView to show Currency -->
        <TextView
            android:id="@+id/textView_EditRepeatedItemsActivity_Currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Currency"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <!-- EditText for Titel -->
    <EditText
        android:id="@+id/editText_EditRepeatedItemsActivity_Description"
        style="@style/editText_Description"/>

    <!-- Layout for Start and End Date -->
    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <!-- Statment for Start: -->
        <TextView
            android:id="@+id/textView_EditRepeatedOutgoingsActivity_StartStatment"
            style="@style/general_WrapContent"
            android:text="@string/statement_start"
            app:autoSizeTextType="uniform" />

        <!-- Edittext for Start -->
        <EditText
            android:id="@+id/editText_EditRepeatedItemsActivity_Start"
            style="@style/general_WrapContent"
            android:layout_weight="1"
            android:focusable="false" />

        <!-- Stament for End: -->
        <TextView
            android:id="@+id/textView_EditRepeatedOutgoingsActivity_EndStatment"
            style="@style/general_WrapContent"
            android:text="@string/statement_end"
            app:autoSizeTextType="uniform" />

        <!-- EditText for End -->
        <EditText
            android:id="@+id/editText_EditRepeatedItemsActivity_End"
            style="@style/general_WrapContent"
            android:layout_weight="1"
            android:focusable="false" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TextView Every -->
        <TextView
            android:id="@+id/editText_EditRepeatedItemsActivity_EveryStatment"
            style="@style/general_Middle_WrapContent"
            android:text="@string/statement_every"
            />

        <!-- EditText Repeated times x -->
        <EditText
            android:id="@+id/editText_EditRepeatedItemsActivity_RepeatedByTimes"
            style="@style/general_Middle_WrapContent"
            android:maxLength="4"
            android:inputType="number"
            android:text="1"
            />


        <!-- Spinner for repeat every Year, Month, Week, Day -->
        <Spinner
            android:id="@+id/spinner_EditRepeatedItemsActivity_RepeatBy"
            style="@style/general_Middle_MatchParent"
            android:entries="@array/repeated_arrays" />

    </LinearLayout>


    <!-- Layout for the Bottom -->
    <RelativeLayout
        style="@style/general_Bottom_MatchParent"
        android:layout_weight="1"
        android:gravity="bottom">

        <!-- Button for save repeated Outgoing -->
        <Button
            android:id="@+id/button_EditRepeatedOutgoingsActivity_Save"
            style="@style/button_WrapContent"
            android:layout_alignParentEnd="true"
            android:onClick="onClick_SaveRepeatedValues"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_EditRepeatedOutgoingsActivity_Delet"
            style="@style/button_WrapContent"
            android:layout_alignParentStart="true"
            android:onClick="onClick_DeletReapeatedValuees"
            android:text="@string/button_delete" />


    </RelativeLayout>
</LinearLayout>