<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.AddRepeatedItemsActivity">

    <include
        android:id="@+id/toolbar_MainActivity"
        layout="@layout/toolbar_main_activity">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- EditText for Titel -->
        <EditText
            android:id="@+id/editText_AddRepeatedItemsActivity_Title"
            style="@style/editText_Title" />

        <!-- Button to choose Title Color -->
        <Button
            android:id="@+id/button_AddRepeatedItemsActivity_ChooseColor"
            style="@style/button_Color_Chooser"
            android:background="@drawable/button_color_chooser" />
    </LinearLayout>

    <!-- Layout for Currency -->
    <LinearLayout style="@style/general_Middle_MatchParent">


        <!-- EditText Value -->
        <EditText
            android:id="@+id/editText_AddRepeatedItemsActivity_Value"
            style="@style/general_WrapContent"
            android:layout_weight="1"
            android:hint="@string/hint_value"
            android:inputType="numberDecimal" />

        <!-- TextView to show Currency -->
        <TextView
            android:id="@+id/textView_AddRepeatedItemsActivity_Currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <!-- EditText for Titel -->
    <EditText
        android:id="@+id/editText_AddRepeatedItemsActivity_Description"
        style="@style/editText_Description" />

    <!-- Layout for Start and End Date -->
    <LinearLayout
        style="@style/general_Middle_MatchParent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <!-- Statment for Start: -->
        <TextView
            android:id="@+id/textView_AddReapeatedValueActivity_StartStatment"
            style="@style/general_WrapContent"
            android:text="@string/statement_start"
            app:autoSizeTextType="uniform" />

        <!-- Edittext for Start -->
        <EditText
            android:id="@+id/editText_AddRepeatedItemsActivity_Start"
            style="@style/general_WrapContent"
            android:layout_weight="1"
            android:focusable="false" />

        <!-- Stament for End: -->
        <TextView
            android:id="@+id/textView_AddReapeatedValueActivity_EndStatment"
            style="@style/general_WrapContent"
            android:text="@string/statement_end"
            app:autoSizeTextType="uniform" />

        <!-- EditText for End -->
        <EditText
            android:id="@+id/editText_AddRepeatedItemsActivity_End"
            style="@style/general_WrapContent"
            android:layout_weight="1"
            android:focusable="false" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TextView Every -->
        <TextView
            android:id="@+id/editText_AddRepeatedItemsActivity_EveryStatment"
            style="@style/general_Middle_WrapContent"
            android:text="@string/statement_every"
            />

        <!-- EditText Repeated times x -->
        <EditText
            android:id="@+id/editText_AddRepeatedItemsActivity_RepeatedByTimes"
            style="@style/general_Middle_WrapContent"
            android:maxLength="4"
            android:inputType="number"
            android:text="1"
            />

        <!-- Spinner for repeat every Year, Month, Week, Day -->
        <Spinner
            android:id="@+id/spinner_AddRepeatedItemsActivity_RepeatBy"
            style="@style/general_Middle_MatchParent"
            android:entries="@array/repeated_arrays" />
    </LinearLayout>



    <!-- ListView for Repeated Outgoings -->
    <ListView
        android:id="@+id/listView_AddRepeatedItemsActivity"
        style="@style/general_Middle_MatchParent"
        android:layout_weight="1" />

    <!-- Layout for the Bottom -->
    <RelativeLayout style="@style/general_Bottom_MatchParent">

        <!-- Button for save repeated Outgoing -->
        <Button
            android:id="@+id/button_AddRepeatedValueActivity_Save"
            style="@style/button_WrapContent"
            android:layout_centerInParent="true"
            android:onClick="onClick_SaveRepeatedValues"
            android:text="@string/button_save" />

    </RelativeLayout>
</LinearLayout>