<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.EditItemActivity">

    <include
        android:id="@+id/toolbar_MainActivity"
        layout="@layout/toolbar_main_activity">
    </include>

    <!-- Layout for the Items to edit -->
    <LinearLayout
        style="@style/general_MatchParent"
        android:orientation="vertical">

        <!-- TextView for Date -->
        <TextView
            android:id="@+id/textView_EditItemActivity_Date"
            style="@style/general_Top_MatchParent"
            android:text="Date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- EditText for Title -->
            <EditText
                android:id="@+id/editText_EditItemActivity_Titel"
                style="@style/editText_Title" />

            <Button
                android:id="@+id/button_EditItemActivity_ChooseColor"
                style="@style/button_Color_Chooser"
                android:background="@drawable/button_color_chooser" />

        </LinearLayout>

        <!-- Layout for the Value -->
        <LinearLayout
            style="@style/general_Middle_MatchParent"
            android:orientation="horizontal">

            <!-- EditText for Value -->
            <EditText
                android:id="@+id/editText_EditItemActivity_Value"
                style="@style/general_WrapContent"
                android:layout_weight="1"
                android:hint="@string/hint_value"
                android:inputType="numberDecimal" />

            <!-- TextView to show Currency -->
            <TextView
                android:id="@+id/textView_EditItemActivity_Currency"
                style="@style/general_WrapContent"
                android:text="Currency" />

        </LinearLayout>

        <!-- EditText for Description -->
        <EditText
            android:id="@+id/editText_EditItemActivity_Description"
            style="@style/editText_Description" />


    </LinearLayout>

    <!-- Layout for the Bottom -->
    <RelativeLayout
        style="@style/general_Bottom_MatchParent"
        android:layout_weight="1"
        android:gravity="bottom">

        <!-- Button to delet Item -->
        <Button
            android:id="@+id/button_edit_value_delet"
            style="@style/button_WrapContent"
            android:layout_alignParentStart="true"
            android:onClick="onClick_DeletItem"
            android:text="@string/button_delete" />

        <!-- Button to save values -->
        <Button
            android:id="@+id/button_edit_value_save"
            style="@style/button_WrapContent"
            android:layout_alignParentEnd="true"
            android:onClick="onClick_SaveNewValue"
            android:text="@string/button_save" />
    </RelativeLayout>
</LinearLayout>