<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.MainActivity">

    <include
        android:id="@+id/toolbar_MainActivity"
        layout="@layout/toolbar_main_activity">

    </include>

    <!-- Calendar to add new Item -->
    <CalendarView
        android:id="@+id/calendarView_MainActivity_calendar"
        style="@style/general_Top_WrapContent"
        android:layout_gravity="center" />


    <!-- Layout for theBottom -->
    <LinearLayout
        style="@style/general_MatchParent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Layout for Total of Day -->
        <LinearLayout
            android:id="@+id/linearLayout_MainActivity_ValueDay"
            style="@style/general_Middle_WrapContent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!-- Statment for Total Day: -->
            <TextView
                android:id="@+id/textView_MainActivity_SelectedDatValueStatment"
                style="@style/general_Middle_WrapContent"
                android:text="@string/statement_totalDay"
                android:textStyle="bold" />

            <!-- TextView to show Value of the Day -->
            <TextView
                android:id="@+id/textView_MainActivity_SelectedDateValue"
                style="@style/general_WrapContent"
                android:text="TotalValueofDay"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Layout for Total of Month -->
        <LinearLayout
            android:id="@+id/linearLayout_MainActivity_ValueMonth"
            style="@style/general_Middle_WrapContent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!-- Statment for Total Month: -->
            <TextView
                android:id="@+id/textView_MainActivity_TotalValueMonthStatement"
                style="@style/general_Middle_WrapContent"
                android:text="@string/statement_totalMonth"
                android:textStyle="bold" />

            <!-- TextView to show total value of the month -->
            <TextView
                android:id="@+id/textView_MainActivity_totalValueMonth"
                style="@style/general_WrapContent"
                android:text="TotalValueofMonth"
                android:textStyle="bold" />
        </LinearLayout>


        <!-- Layout for Total of Year -->
        <LinearLayout
            android:id="@+id/linearLayout_MainActivity_ValueYear"
            style="@style/general_Middle_WrapContent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!-- Statement for Total Year: -->
            <TextView
                android:id="@+id/textView_MainActivity_TotalValueYearStatement"
                style="@style/general_Middle_WrapContent"
                android:text="@string/statement_totalYear"
                android:textStyle="bold" />

            <!-- TextView to show total value of the Year -->
            <TextView
                android:id="@+id/textView_MainActivity_totalValueYear"
                style="@style/general_WrapContent"
                android:text="TotalValueofYear"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>



