<?xml version="1.0" encoding="utf-8"?>

<!-- Top Layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overviewListActivity_overview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.OverviewActivity">

    <include
        android:id="@+id/toolbar_MainActivity"
        layout="@layout/toolbar_main_activity"></include>

    <!-- Layout for All Filter Objects -->
    <LinearLayout
        android:id="@+id/overviewListActivity_Filter"
        style="@style/general_Top_MatchParent"
        android:orientation="vertical">

        <!-- Layout for All OrderBy Objects -->
        <LinearLayout
            android:id="@+id/overviewListActivity_OrderBy"
            style="@style/general_MatchParent"
            android:orientation="horizontal">

            <!-- Spinner for OrderBy Date or value Objects -->
            <Spinner
                android:id="@+id/spinner_OverviewActivity_OrderBy"
                style="@style/general_WrapContent"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:entries="@array/order_by_arrays" />

            <!-- Spinner for Ascending Descending Order Objects -->
            <Spinner
                android:id="@+id/spinner_OverviewActivity_AscendingDescending"
                style="@style/general_WrapContent"
                android:entries="@array/ascending_descending" />
        </LinearLayout>


        <LinearLayout
            style="@style/general_MatchParent"
            android:orientation="horizontal">

            <!-- Spinner for Items to be Shown, Month, Year or Date from to -->
            <Spinner
                android:id="@+id/spinner_OverviewActivity_Show"
                style="@style/general_WrapContent"
                android:layout_weight="1"
                android:entries="@array/show_arrays" />

            <!-- Spinner for Items to be Shown, Month, Year or Date from to -->
            <Spinner
                android:id="@+id/spinner_OverviewActivity_Hide"
                style="@style/general_WrapContent"
                android:entries="@array/hide_arrays" />

        </LinearLayout>

        <!-- Layout for All Date Objects -->
        <LinearLayout
            android:id="@+id/overviewListActivity_Date"
            style="@style/general_MatchParent"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <!-- Layout for Year and from -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <!-- Statment for Year: or from: -->
                <TextView
                    android:id="@+id/textView_OverviewActivity_YearFromStatment"
                    style="@style/general_WrapContent"
                    android:text="@string/statement_year" />

                <!-- Layout for YearFrom Objects -->
                <android.support.constraint.ConstraintLayout
                    style="@style/general_WrapContent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <!-- Edittext for entering From Date -->
                    <EditText
                        android:id="@+id/editText_OverviewActivity_From"
                        style="@style/general_MatchParent"
                        android:focusable="false" />

                    <!-- Edittext for entering Year -->
                    <EditText
                        android:id="@+id/editText_OverviewActivity_Year"
                        style="@style/general_MatchParent"
                        android:inputType="number"
                        android:maxLength="4" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <!-- Layout for Month and to -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <!-- Stament for Month: or to: -->
                <TextView
                    android:id="@+id/textView_OverviewActivity_MonthToStatment"
                    style="@style/general_WrapContent"
                    android:text="@string/statement_month" />

                <!-- Layout for MonthTo Objects -->
                <android.support.constraint.ConstraintLayout
                    style="@style/general_WrapContent"
                    android:layout_weight="1">

                    <!-- EditText for to: -->
                    <EditText
                        android:id="@+id/editText_OverviewActivity_To"
                        style="@style/general_MatchParent"
                        android:focusable="false" />

                    <!-- EditText for Month -->
                    <EditText
                        android:id="@+id/editText_OverviewActivity_Month"
                        style="@style/general_MatchParent"
                        android:inputType="number"
                        android:maxLength="2" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <!-- Button for show new Selection -->
            <Button
                android:id="@+id/button_OverviewActivity_OK"
                style="@style/button_WrapContent"
                android:onClick="onClick_FilterList"
                android:text="@string/button_ok" />
        </LinearLayout>
    </LinearLayout>

    <!-- ListView for Filtered Items Selected -->
    <ListView
        android:id="@+id/listView_OverviewActivity"
        style="@style/general_Middle_MatchParent"
        android:layout_weight="1" />

    <!-- Layout for Bottom Items, total value -->
    <LinearLayout
        android:id="@+id/overviewListActivity_Bottom"
        style="@style/general_Bottom_MatchParent"
        android:orientation="horizontal">

        <!-- Statment for Total: -->
        <TextView
            android:id="@+id/textView_OverviewListActivity_TotalValueStatment"
            style="@style/general_WrapContent"
            android:layout_gravity="bottom"
            android:textStyle="bold"
            android:text="@string/statement_total" />

        <!-- TextView for Total value -->
        <TextView
            android:id="@+id/textView_OverviewActivity_TotalValue"
            style="@style/general_WrapContent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="Total Value:" />

    </LinearLayout>
</LinearLayout>


